fixed ^0% width of searchbox Blurred background when pop up opens

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -521,3 +521,12 @@ ion-item.brewery-thumbnail.item{
 .medium   { color: #C60; border-color: #FC0;}
 .weak     { color: #900; border-color: #F00;}
 .strength { padding: 1px 10px; border: 2px solid; color: #FFF;}
+
+
+.blur{
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+}
